--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-    "name": "korbit",
-    "displayName": "korbit",
-    "description": "korbit theme",
-    "version": "0.0.1",
-    "engines": {
-        "vscode": "^1.58.0"
-    },
-    "categories": [
-        "Themes"
-    ],
-    "contributes": {
-        "themes": [
-            {
-                "label": "korbit",
-                "uiTheme": "vs-dark",
-                "path": "./themes/korbit-color-theme.json"
-            }
-        ]
-    }
+	"name": "orbit",
+	"displayName": "Korbit",
+	"description": "Korbit Theme for VSCode, inspired by Gruvbox, IntelliJ Darcula, and Visual Studio Dark themes",
+	"version": "0.0.1",
+	"engines": {
+		"vscode": "^1.58.0"
+	},
+	"categories": [
+		"Themes"
+	],
+	"contributes": {
+		"themes": [
+			{
+				"label": "korbit-theme",
+				"uiTheme": "vs-dark",
+				"path": "./themes/korbit-color-theme.json"
+			}
+		]
+	}
 }
