--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-	"name": "orbit",
-	"displayName": "Korbit",
-	"description": "Korbit Theme for VSCode, inspired by Gruvbox, IntelliJ Darcula, and Visual Studio Dark themes",
-	"version": "0.0.1",
-	"engines": {
-		"vscode": "^1.58.0"
-	},
+	"name": "korbit-theme",
+	"displayName": "Korbit Theme",
+	"description": "Korbit Theme for Visual Studio Code, inspired by IntelliJ Darcula, Gruvbox, and Visual Assist advanced highlighting for Visual Studio",
+	"publisher": "RATIU5",
+	"version": "0.1.0",
 	"categories": [
 		"Themes"
 	],
 	"contributes": {
 		"themes": [
 			{
-				"label": "korbit-theme",
-				"uiTheme": "vs-dark",
-				"path": "./themes/korbit-color-theme.json"
+				"label": "Korbit Theme",
+				"path": "./themes/korbit-theme.json",
+				"uiTheme": "vs-dark"
 			}
 		]
+	},
+	"engines": {
+		"vscode": "*"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/RATIU5/korbit"
+	},
+	"scripts": {
+		"package": "vsce package",
+		"publish": "vsce publish"
 	}
 }
